tests/ui/consts/const-fn-error.stderr
error[E0277]: the trait bound `std::ops::Range<usize>: [const] Iterator` is not satisfied
  --> $DIR/const-fn-error.rs:5:14
   |
LL |     for i in 0..x {
   |              ^^^^ required by a bound introduced by this call
   |
note: trait `Iterator` is implemented but not `const`
  --> $SRC_DIR/core/src/iter/range.rs:LL:COL
   = note: required for `std::ops::Range<usize>` to implement `[const] IntoIterator`

error[E0277]: the trait bound `std::ops::Range<usize>: [const] Iterator` is not satisfied
  --> $DIR/const-fn-error.rs:5:14
   |
LL |     for i in 0..x {
   |              ^^^^
   |
note: trait `Iterator` is implemented but not `const`
  --> $SRC_DIR/core/src/iter/range.rs:LL:COL

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
